# multibootusb2

./: README.md  pyproject.toml  start.py  tasks.py
fs_utils/: gather_device_info.py  runners.py
iso-utils/: iso-utils.py
multibootusb2/: start.py  start_tui.py
multibootusb2/fs_utils/: partition_utils.py  runners.py
multibootusb2/gui/: device_tab.py  gui.py
multibootusb2/tui/: common_elements.py  first_screen.py  second_screen.py  third_screen.py  tui.py
multibootusb2/udev/: udev.py
multibootusb2/usb_utils/: usb_utils.py
tables/: partition_types.py
tui/: tui.py
udev/: udev.py
